<resources>
    <string name="app_name">Nac01rm78896</string>
    <string name="revestimento_mosaico">Revestimento Mosaico</string>
    <string name="porcelanato_perlato_branco">Porcelanato Perlato Branco</string>
    <string name="piso_albania_45_x_45">Piso albania 45 x 45</string>
    <string name="piso_branco_baixo_brilho">Piso Branco Baixo Brilho</string>
    <string name="informe_o_material_que_deseja">Informe o material que deseja</string>
    <string name="informe_a_medida_em_m">Informe a medida em m²</string>
    <string name="utilizar_frete_mega_r_pido">Utilizar frete mega rápido</string>
    <string name="calcular">CALCULAR</string>
</resources>
