<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/informe_o_material_que_deseja"
    android:layout_marginBottom="3sp"
    android:textSize="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_branco_baixo_brilho"
            android:checked="true"
            android:id="@+id/rb1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso_albania_45_x_45"
            android:id="@+id/rb2"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcelanato_perlato_branco"
            android:id="@+id/rb3"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revestimento_mosaico"
            android:id="@+id/rb4"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_a_medida_em_m"
        android:layout_marginBottom="3sp"
        android:textSize="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/edt"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utilizar_frete_mega_r_pido"
        android:layout_marginBottom="10sp"
        android:id="@+id/cb"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calcular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="$00,00"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:id="@+id/txtResult"/>

</LinearLayout>
